fixed height problem on smaller screen where button was out of the screen

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -42,6 +42,10 @@ header {
 
 /* Media queries */
 @media (max-width: 736px) {
+  header {
+    height: auto;
+  }
+
   .header-container {
     grid-template-columns: 1fr;
     gap: 0;
